<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_demos"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/menu_demos" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>