<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_games">

    <fragment
        android:id="@+id/nav_games"
        android:name="com.gamebox.ui.games.GamesFragment"
        android:label="@string/menu_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.gamebox.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_demos"
        android:name="com.gamebox.ui.demos.DemosFragment"
        android:label="@string/menu_demos"
        tools:layout="@layout/fragment_demos" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.gamebox.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>