<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.games.TicTacToeActivity">

    <TextView
        android:id="@+id/tic_tac_toe_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/TTT00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square00_content_description"
        app:layout_constraintEnd_toStartOf="@+id/TTT01"
        app:layout_constraintTop_toTopOf="@+id/TTT01" />

    <ImageButton
        android:id="@+id/TTT10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square10_content_description"
        app:layout_constraintEnd_toStartOf="@+id/TTT11"
        app:layout_constraintTop_toBottomOf="@+id/TTT00" />

    <ImageButton
        android:id="@+id/TTT20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square20_content_description"
        app:layout_constraintEnd_toStartOf="@+id/TTT21"
        app:layout_constraintTop_toBottomOf="@+id/TTT10" />

    <ImageButton
        android:id="@+id/TTT01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square01_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_turn" />

    <ImageButton
        android:id="@+id/TTT11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square11_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TTT01" />

    <ImageButton
        android:id="@+id/TTT21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square21_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TTT11" />

    <ImageButton
        android:id="@+id/TTT02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square02_content_description"
        app:layout_constraintStart_toEndOf="@+id/TTT01"
        app:layout_constraintTop_toTopOf="@+id/TTT01" />

    <ImageButton
        android:id="@+id/TTT12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square12_content_description"
        app:layout_constraintStart_toEndOf="@+id/TTT11"
        app:layout_constraintTop_toBottomOf="@+id/TTT02" />

    <ImageButton
        android:id="@+id/TTT22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tic_tac_toe_square"
        android:contentDescription="@string/ttt_square22_content_description"
        app:layout_constraintStart_toEndOf="@+id/TTT21"
        app:layout_constraintTop_toBottomOf="@+id/TTT12" />

    <TextView
        android:id="@+id/tic_tac_toe_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TTT21" />

    <Button
        android:id="@+id/ttt_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>