<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.games.SimonActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/simon_green_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/simon_green_button_content_description"
                android:src="@drawable/ic_simon_green_off" />

            <ImageButton
                android:id="@+id/simon_red_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/simon_red_button_content_description"
                android:src="@drawable/ic_simon_red_off" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/simon_yellow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/simon_yellow_button_content_description"
                android:src="@drawable/ic_simon_yellow_off" />

            <ImageButton
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/simon_blue_button_content_description"
                android:id="@+id/simon_blue_button"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_simon_blue_off" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>